<resources>
    <string name="app_name">BigerApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="set">Save Location</string>
    <string name="register_prompt">Don\'t have an account? Register now!</string>
    <string name="login_prompt">Already have an account? Login here!</string>
    <string name="headingLogin">Welcome back,</string>
    <string name="heading2Login">Let\'s start now !</string>
    <string name="heading3Login">Enter your credentials to continue.</string>
    <string name="headingRegister">Hello,</string>
    <string name="heading2Register">Let\'s join us !</string>
    <string name="heading3Register">Create an account to get started.</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_setting">Setting</string>
    <string name="setting">Your Location</string>
    <string name="name">Name :</string>
    <string name="emaill">Email :</string>
    <string name="address">Address :</string>
    <string name="postal">Postal Code : </string>
    <string name="street">Street :</string>
    <string name="hamlet">Hamlet :</string>
    <string name="village">Village :</string>
    <string name="district">District :</string>
    <string name="city">City/Regency :</string>
    <string name="province">Province :</string>
    <string name="formatted_address">Formatted Address :</string>
    <string name="update_location">Update Location</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_email_password">Invalid Email or Password</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="heading2Add">Please fill in all the fields to get the best recommendations</string>
    <string name="heading1Add">Setup Your Location</string>
    <string name="addressHint">Address</string>
    <string name="routeHint">Route</string>
    <string name="hamletHint">Hamlet</string>
    <string name="villageHint">Village</string>
    <string name="districtHint">District</string>
    <string name="cityHint">City/Regency</string>
    <string name="provinceHint">Province</string>
    <string name="postal_codeHint">Postal Code</string>
    <string name="undefined">Empty</string>
    <string name="caption_post">Caption</string>
    <string name="title_post">Title</string>
    <string name="posted_by">Posted by : </string>
    <string name="publisher">user@gmail.com</string>
    <string name="heading2Community">Share your daily business</string>
    <string name="heading1Community">Community Posts</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="welcome">Welcome !</string>
    <string name="welcome_text">Now you are a member of Biger,\nyou get recommendation businness,\nby your location.</string>
    <string name="title_activity_preferences_business">PreferencesBusinessActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="select_price">Select Price</string>

    <string-array name="price_options">
        <item>MODERATE</item>
        <item>EXPENSIVE</item>
        <item>INEXPENSIVE</item>
    </string-array>

    <string name="select_rating">Select Rating</string>
    <string name="generate_now">Generate Now</string>

    <string-array name="rating_options">
        <item>0.0</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>5.0</item>
    </string-array>

</resources>