<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvLoginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/heading1Add"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLoginHeading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/heading2Add"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:layout_below="@id/tvLoginHeading"
            android:layout_centerHorizontal="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addressHint"
            android:layout_below="@id/tvLoginHeading3"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/routeHint"
            android:layout_below="@id/tilPreferenceAddress"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceAdminLevel5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hamletHint"
            android:layout_below="@id/tilPreferenceRoute"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceAdminLevel5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceAdminLevel4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/villageHint"
            android:layout_below="@id/tilPreferenceAdminLevel5"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceAdminLevel4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceAdminLevel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/districtHint"
            android:layout_below="@id/tilPreferenceAdminLevel4"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceAdminLevel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceAdminLevel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cityHint"
            android:layout_below="@id/tilPreferenceAdminLevel3"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceAdminLevel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferenceAdminLevel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provinceHint"
            android:layout_below="@id/tilPreferenceAdminLevel2"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferenceAdminLevel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPreferencePostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal_codeHint"
            android:layout_below="@id/tilPreferenceAdminLevel1"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPreferencePostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button_bg"
            android:textColor="#FFFFFF"
            android:text="@string/set"
            android:textSize="16sp"
            android:fontFamily="@font/semi_bold"
            android:layout_below="@id/tilPreferencePostalCode"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>
