<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    android:gravity="center"
    android:paddingStart="35dp"
    android:paddingEnd="35dp"
    android:paddingTop="40dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:fontFamily="@font/regular"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/welcomeTitle"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_go"
        android:background="@drawable/rounded_button_bg"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
