<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.ui.settings.SettingFragment"
    android:background="@color/colorPrimary"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="26sp"
            android:fontFamily="@font/bold"
            android:layout_gravity="center"
            android:textColor="@color/white"/>



        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/colorSecondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/address"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/street"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hamlet"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvHamlet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/village"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/district"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/city"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/province"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/postal"
                    android:fontFamily="@font/regular"
                    android:textSize="12sp"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/undefined"
                    android:fontFamily="@font/regular"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button_bg"
            android:textColor="#FFFFFF"
            android:text="@string/update_location"
            android:textSize="16sp"
            android:fontFamily="@font/semi_bold"/>

    </LinearLayout>

</ScrollView>